--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
             <artifactId>vertx-web-api-contract</artifactId>
             <version>${vertx.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-boringssl-static</artifactId>
+            <version>2.0.7.Final</version>
+        </dependency>
+
     </dependencies>
 
 </project>
